--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                         <span class="time-label">Days</span>
                     </div>
                     <div class="time-segment">
-                        <i class="fas fa-french-fries time-icon"></i>
+                        <i class="fas fa-clock time-icon"></i>
                         <div class="flip-card" id="hours-card">
                             <div class="flip-card-inner">
                                 <div class="flip-card-front" id="hours-front">00</div>
