--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
                         <span class="time-label">Hours</span>
                     </div>
                     <div class="time-segment">
-                        <i class="fas fa-french-fries time-icon"></i>
+                        <i class="fas fa-hourglass-start time-icon"></i>
                         <div class="flip-card" id="minutes-card">
                             <div class="flip-card-inner">
                                 <div class="flip-card-front" id="minutes-front">00</div>
